--- a/.gitignore
+++ b/.gitignore
@@ -3,29 +3,17 @@
 .RData
 .DS_Store
 
-_book
-csas-style
 knitr-cache-docx
 knitr-cache-pdf
 knitr-cache-tex
 knitr-figs-docx
 knitr-figs-pdf
-reference-materials
-models*
-
-techreport.Rmd
-techreport.tex
+REFERENCE_ARCHIVE
+data
 
 *.aux
-*.jpg
 *.html
 *.knit.md
 *.log
-*.pdf
-*.png
-*.rda
-*.rds
 *.Rproj
-*.sty
-*.upa
-*.utf8.md
+.here
