--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,3 @@
 book_filename: "techreport"
-rmd_files: ["index.Rmd",
-            "01_introduction.Rmd",
-            "02_methods.Rmd",
-            "03_results.Rmd",
-            "04_discussion.Rmd",
-            "05_bibliography.Rmd"]
+rmd_files: ["index.Rmd", "shorelinemod_report.Rmd",]
 delete_merged_file: true
